--- a/vr_some_statisticPlots.ipynb
+++ b/vr_some_statisticPlots.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "500df6ae-546f-47e2-9012-da1410b60653",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:05.007745Z",
-     "iopub.status.busy": "2025-08-15T03:30:05.007470Z",
-     "iopub.status.idle": "2025-08-15T03:30:05.012819Z",
-     "shell.execute_reply": "2025-08-15T03:30:05.011557Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:05.007718Z"
+     "iopub.execute_input": "2025-08-19T17:14:31.141702Z",
+     "iopub.status.busy": "2025-08-19T17:14:31.140889Z",
+     "iopub.status.idle": "2025-08-19T17:14:31.476400Z",
+     "shell.execute_reply": "2025-08-19T17:14:31.475752Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:31.141678Z"
     }
    },
    "outputs": [],
@@ -19,19 +19,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efa4746f-dad3-43b4-a138-161936bea198",
+   "metadata": {},
+   "source": [
+    "## Visualizing Some Statistical Information\n",
+    "\n",
+    "> Version: 1.0\n",
+    ">\n",
+    "> Container Size: Large\n",
+    "\n",
+    "> Description: In this notebook, we present illustrative examples of using Vera Rubin's functions to visualize statistical information."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "7e63c09b-0d47-4a3e-b4db-f4ec878cc9ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "1c8a0477-c7ae-473a-8ea8-ca751e3dd014",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:05.018089Z",
-     "iopub.status.busy": "2025-08-15T03:30:05.017834Z",
-     "iopub.status.idle": "2025-08-15T03:30:05.110173Z",
-     "shell.execute_reply": "2025-08-15T03:30:05.109524Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:05.018061Z"
+     "iopub.execute_input": "2025-08-19T17:14:31.477466Z",
+     "iopub.status.busy": "2025-08-19T17:14:31.477279Z",
+     "iopub.status.idle": "2025-08-19T17:14:31.542308Z",
+     "shell.execute_reply": "2025-08-19T17:14:31.541403Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:31.477450Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -39,15 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "f99db52c-ed62-43b6-91bd-330be42d1b6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:05.114379Z",
-     "iopub.status.busy": "2025-08-15T03:30:05.114111Z",
-     "iopub.status.idle": "2025-08-15T03:30:08.608892Z",
-     "shell.execute_reply": "2025-08-15T03:30:08.607917Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:05.114353Z"
+     "iopub.execute_input": "2025-08-19T17:14:31.577018Z",
+     "iopub.status.busy": "2025-08-19T17:14:31.576257Z",
+     "iopub.status.idle": "2025-08-19T17:14:31.620723Z",
+     "shell.execute_reply": "2025-08-19T17:14:31.619973Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:31.576996Z"
     }
    },
    "outputs": [],
@@ -59,15 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "a000dff3-de04-4595-a869-675d19a0bed5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:08.611306Z",
-     "iopub.status.busy": "2025-08-15T03:30:08.611154Z",
-     "iopub.status.idle": "2025-08-15T03:30:08.638800Z",
-     "shell.execute_reply": "2025-08-15T03:30:08.638081Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:08.611291Z"
+     "iopub.execute_input": "2025-08-19T17:14:31.776605Z",
+     "iopub.status.busy": "2025-08-19T17:14:31.775828Z",
+     "iopub.status.idle": "2025-08-19T17:14:31.822523Z",
+     "shell.execute_reply": "2025-08-19T17:14:31.821729Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:31.776582Z"
     }
    },
    "outputs": [],
@@ -94,15 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "b5b76ca7-a6c9-4afc-ac25-8ce62949f82b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:08.746905Z",
-     "iopub.status.busy": "2025-08-15T03:30:08.746435Z",
-     "iopub.status.idle": "2025-08-15T03:30:09.203444Z",
-     "shell.execute_reply": "2025-08-15T03:30:09.202671Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:08.746860Z"
+     "iopub.execute_input": "2025-08-19T17:14:32.350162Z",
+     "iopub.status.busy": "2025-08-19T17:14:32.349241Z",
+     "iopub.status.idle": "2025-08-19T17:14:32.519341Z",
+     "shell.execute_reply": "2025-08-19T17:14:32.518471Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:32.350139Z"
     }
    },
    "outputs": [],
@@ -121,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "018199d9-3ca3-4c06-a504-958459ff7a5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T04:14:42.019358Z",
-     "iopub.status.busy": "2025-08-15T04:14:42.018463Z",
-     "iopub.status.idle": "2025-08-15T04:14:42.353442Z",
-     "shell.execute_reply": "2025-08-15T04:14:42.352669Z",
-     "shell.execute_reply.started": "2025-08-15T04:14:42.019326Z"
+     "iopub.execute_input": "2025-08-19T17:14:32.747563Z",
+     "iopub.status.busy": "2025-08-19T17:14:32.747133Z",
+     "iopub.status.idle": "2025-08-19T17:14:32.794498Z",
+     "shell.execute_reply": "2025-08-19T17:14:32.793475Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:32.747518Z"
     }
    },
    "outputs": [],
@@ -161,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "032c2ee8-e242-4c7e-bf5d-46d0e42d747b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:14.890804Z",
-     "iopub.status.busy": "2025-08-15T03:30:14.890177Z",
-     "iopub.status.idle": "2025-08-15T03:30:14.919248Z",
-     "shell.execute_reply": "2025-08-15T03:30:14.918763Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:14.890782Z"
+     "iopub.execute_input": "2025-08-19T17:14:33.283793Z",
+     "iopub.status.busy": "2025-08-19T17:14:33.283479Z",
+     "iopub.status.idle": "2025-08-19T17:14:33.328434Z",
+     "shell.execute_reply": "2025-08-19T17:14:33.327299Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:33.283772Z"
     }
    },
    "outputs": [],
@@ -180,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "16c79608-737c-4211-b19b-5da6546e1831",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:30:16.062529Z",
-     "iopub.status.busy": "2025-08-15T03:30:16.061796Z",
-     "iopub.status.idle": "2025-08-15T03:30:21.213085Z",
-     "shell.execute_reply": "2025-08-15T03:30:21.212391Z",
-     "shell.execute_reply.started": "2025-08-15T03:30:16.062495Z"
+     "iopub.execute_input": "2025-08-19T17:14:33.519369Z",
+     "iopub.status.busy": "2025-08-19T17:14:33.518931Z",
+     "iopub.status.idle": "2025-08-19T17:14:37.119939Z",
+     "shell.execute_reply": "2025-08-19T17:14:37.119233Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:33.519334Z"
     }
    },
    "outputs": [],
@@ -199,15 +230,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "2b3fc33e-bc37-4cd7-9b96-abfd1594b9be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:31:03.952239Z",
-     "iopub.status.busy": "2025-08-15T03:31:03.950051Z",
-     "iopub.status.idle": "2025-08-15T03:31:04.511437Z",
-     "shell.execute_reply": "2025-08-15T03:31:04.510636Z",
-     "shell.execute_reply.started": "2025-08-15T03:31:03.952192Z"
+     "iopub.execute_input": "2025-08-19T17:14:37.126078Z",
+     "iopub.status.busy": "2025-08-19T17:14:37.125777Z",
+     "iopub.status.idle": "2025-08-19T17:14:37.448795Z",
+     "shell.execute_reply": "2025-08-19T17:14:37.448056Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:37.126058Z"
     }
    },
    "outputs": [],
@@ -229,15 +260,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "9d4bdab6-ab68-46e1-bb1f-b3f4e9a55fb6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:31:08.045851Z",
-     "iopub.status.busy": "2025-08-15T03:31:08.044975Z",
-     "iopub.status.idle": "2025-08-15T03:31:08.209232Z",
-     "shell.execute_reply": "2025-08-15T03:31:08.208649Z",
-     "shell.execute_reply.started": "2025-08-15T03:31:08.045825Z"
+     "iopub.execute_input": "2025-08-19T17:14:37.449682Z",
+     "iopub.status.busy": "2025-08-19T17:14:37.449486Z",
+     "iopub.status.idle": "2025-08-19T17:14:37.494835Z",
+     "shell.execute_reply": "2025-08-19T17:14:37.494070Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:37.449667Z"
     }
    },
    "outputs": [
@@ -273,15 +304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "37ece539-aac6-4463-910a-937faebd9c93",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:31:08.497787Z",
-     "iopub.status.busy": "2025-08-15T03:31:08.496908Z",
-     "iopub.status.idle": "2025-08-15T03:31:08.562736Z",
-     "shell.execute_reply": "2025-08-15T03:31:08.561875Z",
-     "shell.execute_reply.started": "2025-08-15T03:31:08.497757Z"
+     "iopub.execute_input": "2025-08-19T17:14:37.496511Z",
+     "iopub.status.busy": "2025-08-19T17:14:37.496306Z",
+     "iopub.status.idle": "2025-08-19T17:14:37.542783Z",
+     "shell.execute_reply": "2025-08-19T17:14:37.542172Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:37.496495Z"
     }
    },
    "outputs": [
@@ -317,15 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "ed46f4c6-bc2c-4f94-b907-81b80f300ffe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:32:59.743633Z",
-     "iopub.status.busy": "2025-08-15T03:32:59.741892Z",
-     "iopub.status.idle": "2025-08-15T03:33:00.081852Z",
-     "shell.execute_reply": "2025-08-15T03:33:00.081280Z",
-     "shell.execute_reply.started": "2025-08-15T03:32:59.743594Z"
+     "iopub.execute_input": "2025-08-19T17:14:37.543445Z",
+     "iopub.status.busy": "2025-08-19T17:14:37.543282Z",
+     "iopub.status.idle": "2025-08-19T17:14:37.589763Z",
+     "shell.execute_reply": "2025-08-19T17:14:37.588992Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:37.543430Z"
     }
    },
    "outputs": [
@@ -335,7 +366,7 @@
        "(230, 232)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,15 +387,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "1ec18e5b-9f3c-4af2-bc17-2fa6e5fd104c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T04:15:21.109658Z",
-     "iopub.status.busy": "2025-08-15T04:15:21.109375Z",
-     "iopub.status.idle": "2025-08-15T04:15:21.294477Z",
-     "shell.execute_reply": "2025-08-15T04:15:21.293925Z",
-     "shell.execute_reply.started": "2025-08-15T04:15:21.109640Z"
+     "iopub.execute_input": "2025-08-19T17:14:37.590654Z",
+     "iopub.status.busy": "2025-08-19T17:14:37.590457Z",
+     "iopub.status.idle": "2025-08-19T17:14:37.672977Z",
+     "shell.execute_reply": "2025-08-19T17:14:37.672280Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:37.590638Z"
     }
    },
    "outputs": [
@@ -410,15 +441,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "id": "f6ac63d6-73cd-42ef-9611-184c5684dde8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T04:17:09.007303Z",
-     "iopub.status.busy": "2025-08-15T04:17:09.007021Z",
-     "iopub.status.idle": "2025-08-15T04:17:09.724064Z",
-     "shell.execute_reply": "2025-08-15T04:17:09.723547Z",
-     "shell.execute_reply.started": "2025-08-15T04:17:09.007285Z"
+     "iopub.execute_input": "2025-08-19T17:14:37.673820Z",
+     "iopub.status.busy": "2025-08-19T17:14:37.673641Z",
+     "iopub.status.idle": "2025-08-19T17:14:38.289102Z",
+     "shell.execute_reply": "2025-08-19T17:14:38.288283Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:37.673806Z"
     }
    },
    "outputs": [
@@ -443,15 +474,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "id": "02741358-4b9d-48a7-bb87-0b6caaad29ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T04:15:53.378032Z",
-     "iopub.status.busy": "2025-08-15T04:15:53.377263Z",
-     "iopub.status.idle": "2025-08-15T04:16:09.436706Z",
-     "shell.execute_reply": "2025-08-15T04:16:09.435967Z",
-     "shell.execute_reply.started": "2025-08-15T04:15:53.377992Z"
+     "iopub.execute_input": "2025-08-19T17:14:38.290019Z",
+     "iopub.status.busy": "2025-08-19T17:14:38.289824Z",
+     "iopub.status.idle": "2025-08-19T17:14:53.686704Z",
+     "shell.execute_reply": "2025-08-19T17:14:53.686181Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:38.290003Z"
     }
    },
    "outputs": [
@@ -490,15 +521,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "1ed2d20b-59b7-4369-9e52-3cf335e0aed6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:31:52.109483Z",
-     "iopub.status.busy": "2025-08-15T03:31:52.109251Z",
-     "iopub.status.idle": "2025-08-15T03:32:01.263004Z",
-     "shell.execute_reply": "2025-08-15T03:32:01.262355Z",
-     "shell.execute_reply.started": "2025-08-15T03:31:52.109466Z"
+     "iopub.execute_input": "2025-08-19T17:14:53.687481Z",
+     "iopub.status.busy": "2025-08-19T17:14:53.687306Z",
+     "iopub.status.idle": "2025-08-19T17:15:03.757961Z",
+     "shell.execute_reply": "2025-08-19T17:15:03.757269Z",
+     "shell.execute_reply.started": "2025-08-19T17:14:53.687465Z"
     }
    },
    "outputs": [
@@ -521,15 +552,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "13fe8cbd-5af5-4d18-a84f-1e91ec18eee6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-15T03:32:01.263982Z",
-     "iopub.status.busy": "2025-08-15T03:32:01.263757Z",
-     "iopub.status.idle": "2025-08-15T03:32:29.642626Z",
-     "shell.execute_reply": "2025-08-15T03:32:29.641715Z",
-     "shell.execute_reply.started": "2025-08-15T03:32:01.263964Z"
+     "iopub.execute_input": "2025-08-19T17:15:03.759522Z",
+     "iopub.status.busy": "2025-08-19T17:15:03.759323Z",
+     "iopub.status.idle": "2025-08-19T17:15:39.244513Z",
+     "shell.execute_reply": "2025-08-19T17:15:39.243850Z",
+     "shell.execute_reply.started": "2025-08-19T17:15:03.759507Z"
     }
    },
    "outputs": [
