--- a/examples/vr_warp_example.ipynb
+++ b/examples/vr_warp_example.ipynb
@@ -803,9 +803,8 @@
    },
    "outputs": [],
    "source": [
-    "exposures_data = {ref.dataId['visit']:\n",
-    "    lbutler.get(\"visit_image\", dataId=ref.dataId) for ref in visit_refs[:3]\n",
-    "}"
+    "exposures_data = np.array([[ref.dataId['visit'],\n",
+    "    lbutler.get(\"visit_image\", dataId=ref.dataId)] for ref in visit_refs[:3]], dtype=object)"
    ]
   },
   {
@@ -836,10 +835,10 @@
    "source": [
     "point_sky = lsst.geom.SpherePoint(ra_deg, dec_deg, lsst.geom.degrees)\n",
     "\n",
-    "vr.plot_exposures_full(exposures_data.values(),\n",
+    "vr.plot_exposures_full(exposures_data[:,1],\n",
     "                       center_coord=point_sky,\n",
     "                       exposures_scale='percentile',\n",
-    "                       titles=list(map(str, exposures_data.keys())),\n",
+    "                       titles=list(map(str, exposures_data[:,0])),\n",
     "                       axeslabels=['pixel', 'pixel'],\n",
     "                       grid=False)"
    ]
